# svg-creator

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  main.cpp  run.sh
src/Common/FileManager/: FileManager.cpp  FileManager.h
src/Common/Utils/: Utils.cpp  Utils.h
src/Utils/: FileManager.cpp  FileManager.h
src/Utils/FileManager/: FileManager.cpp  FileManager.h
src/Utils/Utils/: Utils.cpp
src/Views/Draw/: Draw.cpp  Draw.h
src/Views/Menu/: Menu.cpp  Menu.h
src/Views/MenuDraw/: MenuDraw.cpp  MenuDraw.h
src/Views/MenuDrawExit/: MenuDrawExit.cpp  MenuDrawExit.h
src/Views/MenuDrawExitSave/: MenuDrawExitSave.cpp  MenuDrawExitSave.h
src/Views/MenuNameFile/: MenuNameFile.cpp  MenuNameFile.h
src/Views/NameFile/: NameFile.cpp  NameFile.h
